--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,6 +1,5 @@
 ---
 - hosts: localhost
-  remote_user: root
+  become: yes
   roles:
-    - src: mjcramer.system
-      sudo: yes
+    - mjcramer.system
