--- a/.travis.yml
+++ b/.travis.yml
@@ -21,15 +21,16 @@ services:
 before_install:
   # Make sure everything's up to date.
   - sudo apt-get update -qq
+  - echo "Pulling docker images for ${distribution}:${version}..."
   - sudo docker pull ${distribution}:${version}
-  - sudo docker build --no-cache --rm --file=travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible travis'
+  - sudo docker build --no-cache --rm --file=travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible travis
 
 install:
   # Install Ansible.
   - pip install ansible
 
 script:
-  - "ansible-galaxy install mjcramer.system" 
+  - ansible-galaxy install mjcramer.system
   - container_id=$(mktemp)
   - 'sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/etc/ansible/roles/system:ro ${distribution}-${version}:ansible > "${container_id}"'
   - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/system/tests/test.yml --syntax-check'
