--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,8 @@ services:
 before_install:
   # Make sure everything's up to date.
   - sudo apt-get update -qq
-  - mkdir travis
-  - echo "Pulling docker images for ${distribution}:${version}..."
   - sudo docker pull ${distribution}:${version}
-  - sudo docker build --no-cache --rm --file=travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible travis
+  - sudo docker build --no-cache --rm --file=tests/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible tests
 
 install:
   # Install Ansible.
