--- a/.travis.yml
+++ b/.travis.yml
@@ -1,46 +1,22 @@
----
+dist: bionic
 language: python
-python: "2.7"
-sudo: required
-
+python: '3.7'
 env:
-  - distribution: ubuntu
-    version: bionic
-  - distribution: ubuntu
-    version: xenial
-#  - distribution: debian
-#    version: stretch
-#  - distribution: debian
-#    version: jessie
-#  - distribution: centos
-#    version: 7
-
-services:
-  - docker
-
+- JVM_PROVIDER=openjdk JAVA_VERSION=8 DISTROS=ubuntu,debian,fedora
+- JVM_PROVIDER=openjdk JAVA_VERSION=11 DISTROS=ubuntu,fedora
 before_install:
-  # Make sure everything's up to date.
-  - sudo apt-get update -qq
-  - sudo docker pull ${distribution}:${version}
-  - sudo docker build --no-cache --rm --file=tests/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible tests
-
+- openssl aes-256-cbc -K $encrypted_ae4a4597577a_key -iv $encrypted_ae4a4597577a_iv
+  -in .ansible-vault-password.enc -out .ansible-vault-password -d
+- sudo apt-get update -qq
 install:
-  # Install Ansible.
-  - pip install ansible
-
+- pip3 install ansible pyopenssl cryptography
+before_script:
+- make setup
 script:
-  - ansible-galaxy install mjcramer.system
-  - container_id=$(mktemp)
-  - 'sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/etc/ansible/roles/system:ro ${distribution}-${version}:ansible > "${container_id}"'
-  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/system/tests/test.yml --syntax-check'
-  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/system/tests/test.yml'
-  - >
-    sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/system/tests/test.yml
-    | grep -q 'changed=0.*failed=0'
-    && (echo 'Idempotence: PASS' && exit 0)
-    || (echo 'Idempotence: FAIL' && exit 1)
-  - 'sudo docker rm -f "$(cat ${container_id})"'
-
+- make install ADD_ANSIBLE_PLAYBOOK_OPTS="--syntax-check"
+- make install
+- 'make install | grep -q ''changed=0.*failed=0'' && (echo ''Idempotence: PASS'' && exit 0) || (echo ''Idempotence: FAIL'' && exit 1)'
+after_script:
+- make teardown
 notifications:
-    webhooks: https://galaxy.ansible.com/api/v1/notifications/
-
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/
