--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,8 +6,8 @@ galaxy_info:
   platforms:
   - name: Ubuntu
     versions:
-    - zesty
-  - name: EL
+    - bionic
+  - name: Centos
     versions:
     - 7
   galaxy_tags:
