--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -10,7 +10,7 @@
 - name: configure | disable ipv6
   sysctl:
     name: "{{ item }}"
-    value: 1
+    value: '1'
     sysctl_set: yes
     state: present
     reload: yes
