--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
 script:
 - make install ADD_ANSIBLE_PLAYBOOK_OPTS="--syntax-check"
 - make install
-- 'make install | grep -q ''changed=0.*failed=0'' && (echo ''Idempotence: PASS'' && exit 0) || (echo ''Idempotence: FAIL'' && exit 1)'
+- 'make install 2>/dev/null | ./tests/idempotence_check.sh'
 after_script:
 - make teardown
 notifications:
