--- a/tasks/apply-Debian.yml
+++ b/tasks/apply-Debian.yml
@@ -1,5 +1,9 @@
 # ansible-role-system/tasks/apply-Debian.yml
 ---
+- name: system | install python3
+  raw: apt install -y python3
+
 - name: system | update apt cache
   apt:
     update_cache: yes
+  changed_when: no
