--- a/tasks/apply-Debian.yml
+++ b/tasks/apply-Debian.yml
@@ -1,9 +1,10 @@
 # ansible-role-system/tasks/apply-Debian.yml
 ---
-- name: system | install python3
+- name: apply | install python3
   raw: apt install -y python3
+  changed_when: no
 
-- name: system | update apt cache
+- name: apply | update apt cache
   apt:
     update_cache: yes
   changed_when: no
