--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,8 @@
 # playbooks/handlers/main.yml
 ---
 - name: reload systemd
-  command: systemctl daemon-reload
+  systemd:
+    daemon_reload: yes
 
 - name: restart rsyslog
   service:
