--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
   
 env:
-  - DISTROS=ubuntu,debian,fedora
+  - DISTROS=centos,ubuntu
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_ae4a4597577a_key -iv $encrypted_ae4a4597577a_iv -in .ansible-vault-password.enc -out .ansible-vault-password -d
