--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -6,9 +6,6 @@
   vars:
     cache_dir: "{{ cache | default('cache') }}"
     private_dir: "{{ cache_dir }}/private"
-    # ssh_key_name: build_key
-    # ssh_private_key_file: "{{ private_dir }}/{{ ssh_key_name }}"
-    # ssh_public_key_file: "{{ ssh_private_key_file }}.pub"
 
     download_dir: /var/cache
     base_home_dir: /opt
@@ -20,5 +17,7 @@
     base_daemon_dir: /usr/local/sbin
     base_data_dir: /srv/data
 
-  roles:
-    - ansible-role-system
+  tasks:
+    - name: Include ansible-role-system
+      include_role:
+        name: ansible-role-system
