--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -18,6 +18,6 @@
     base_data_dir: /srv/data
 
   tasks:
-    - name: Include ansible-role-system
+    - name: Include system role
       include_role:
         name: ansible-role-system
