--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -9,18 +9,18 @@ driver:
     name: vbox
 
 platforms:
-#  - name: centos-8
-#    box: centos/8
-#    memory: 4096
-#    cpus: 1
-
-#  - name: ubuntu-focal64
-#    box: ubuntu/focal64
-#    memory: 4096
-#    cpus: 1
-
   - name: ubuntu-bionic64
     box: ubuntu/bionic64
+    memory: 4096
+    cpus: 1
+
+  - name: debian-buster64
+    box: debian/buster64
+    memory: 4096
+    cpus: 1
+
+  - name: centos-8
+    box: centos/8
     memory: 4096
     cpus: 1
 
